syntax = "proto3";

package usermgmt;

option go_package = "example.com/go-usermgmt-grpc;go_usermgmt_grpc";

service UserManagement {
  rpc CreateNewUser (NewUser) returns (User) {}
  rpc GetUsers(GetUsersParams) returns (UserList) {}   // return all the created users
}

message NewUser {
  string name = 1;
  int32 age = 2;
}

message User {
  string name = 1;
  int32 age = 2;
  int32 id = 3;
}

// message UserManagement

message GetUsersParams {
  repeated User params = 1
}

message UserList {
  repeated User users = 1;
}
